# carmen

camera_info/: left.yaml  right.yaml
carmen_driver/: .tags  .tags_sorted_by_file  CMakeLists.txt  package.xml
carmen_driver/config/: driver.yaml  ps3_joystick.yaml
carmen_driver/include/: GlobalDef.h  Motion.h  carmen_driver.h
carmen_driver/launch/: teleop_carmen.launch  teleop_joystick.launch  test_odometry.launch
carmen_driver/launch/include/: keyboard_tele.launch.xml
carmen_driver/src/: Motion.cpp  carmen_driver.cpp  carmen_driver_node.cpp  carmen_example.cpp  serial_example.cpp  test_serial_read.cpp  tf_broadcaster.cpp  threadexample.cpp
carmen_gui/: CMakeLists.txt  default (backup).rviz  default.rviz  package.xml  plugin_description.xml
carmen_gui/src/rviz/: load_map.h  tool.h  tool_manager.cpp  view_manager.cpp  visualization_frame.cpp  visualization_frame.h  visualizer_app.cpp  wait_for_master_dialog.cpp
carmen_gui/src/rviz/default_plugin/: CMakeLists.txt
carmen_gui/src/rviz/default_plugin/tools/: edit_map_tool.cpp  edit_map_tool.h  goal_tool.cpp  initial_pose_tool.cpp  path_follow_tool.cpp  path_follow_tool.h  pose_tool.h  waypoint_tool.cpp  waypoint_tool.h
carmen_mapping/: CMakeLists.txt  package.xml
carmen_mapping/launch/: carmen_hector_mapping_demo.launch  dis_mapping.launch  gui_dis_mapping.launch  hector_mapping_sim.launch  mapping.launch
carmen_mapping/launch/include/: gmapping.launch.xml  gmapping.rviz  hector.rviz
carmen_navigation/: CMakeLists.txt  package.xml
carmen_navigation/launch/: bag2images.launch  carmen.launch  carmen_stereo.launch  dis_navigation.launch  gui_dis_navigation.launch  gui_nav_with_global_localization.launch  hawaii.launch  nav_with_global_localization.launch  navigation.launch  stereo_calibration.launch  stereo_hacol_lc_with_rtabmap_data.launch  stereo_mapping.launch  stereo_mapping_hawaii.launch  stereo_slam.launch  test_image_sync.launch
carmen_navigation/launch/config/: stereo.rviz
carmen_navigation/launch/include/: amcl.launch  dis_move_base.launch  move_base.launch
carmen_navigation/maps/: corridor.pgm  corridor.yaml  hall.pgm  hall.yaml  hall3floor.pgm  hall3floor.yaml  indoor.pgm  indoor.yaml  room409.pgm  room409.yaml
carmen_navigation/param/run_on_carmen/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
carmen_navigation/param/run_on_hawaii/: dis_base_local_planner_params.yaml  dis_costmap_common_params.yaml  dis_dwa_local_planner_params.yaml  dis_global_costmap_params.yaml  dis_local_costmap_params.yaml  dis_move_base_params.yaml
carmen_navigation/src/: hacol_node.cpp  read_learning_features.cpp  save_learning_features.cpp  test_lc.cpp
carmen_sim/: CMakeLists.txt  package.xml
carmen_sim/config/: localization.rviz
carmen_sim/launch/: gui_mapping.launch  gui_navigation.launch  mapping.launch  navigation.launch
carmen_sim/launch/includes/: amcl.launch.xml  carmen_gazebo.launch.xml  gmapping.launch.xml  move_base.launch.xml
carmen_sim/launch/rviz/: mapping.rviz  navigation.rviz
carmen_sim/maps/: willo.pgm  willo.yaml
carmen_sim/param/: sim_costmap_common_params.yaml  sim_dwa_local_planner_params.yaml  sim_global_costmap_params.yaml  sim_local_costmap_params.yaml  sim_move_base_params.yaml
carmen_sim/urdf/: carmen.xacro
carmen_test/: CMakeLists.txt  package.xml
carmen_test/launch/: pi2e_mapping.launch  test_timer.launch
carmen_test/src/: helloworld  test_timer.cpp  test_timer_multi_thread.cpp  test_timer_vel.cpp  test_timer_vel_in_member_function.cpp  test_timer_vel_in_member_function_call_in_constructor.cpp  test_trans.cpp
carmen_test/src/build-test_qprocess-Desktop_Qt_5_7_0_GCC_64bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  test_qprocess
carmen_test/src/test_qprocess/: main.cpp  mainwindow.cpp  mainwindow.h  test_qprocess.pro
carmen_test/src/test_qprocess/helloworld/: helloworld.pro  main.cpp
utils/dloop/: .gitignore  CMakeLists.txt  package.xml
utils/dloop/examples/: CMakeLists.txt
utils/dloop/include/: FileFunctions.cpp  Profiler.h  TemplatedDatabase.h  TemplatedLoopDetector.h  demoDetector.h
utils/dloop/src/DVision/: SurfSet.cpp
utils/libhaloc/: CMakeLists.txt
utils/libhaloc/include/libhaloc/: image.h  lc.h  utils.h
utils/libhaloc/src/: image.cpp  lc.cpp
